bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type ==
if (litMessage():String==R){
                       ^BDR:4: error: not found: type ==
} else if (litMessage():String==L){
                              ^BDR:7: error: not found: type ==
} else if (litMessage():String==I){
                              ^BDR:11: error: not found: type ==
} else if (litMessage():String==A){
                              ^BDR:13: error: not found: type ==
} else if (litMessage():String==B){
                              ^BDR:16: error: not found: type ==
} else if (litMessage():String==C){
                              ^BDR:20: error: not found: type ==
} else if (litMessage():String==Z){
                              ^BDR:22: error: not found: type ==
} else if (litMessage():String==Y){
                              ^BDR:25: error: not found: type ==
} else if (litMessage():String==X){
                              ^