bdr.BDR.scala.code
if (litMessage():String==R){
  droite()
  avance()
} else if (litMessage():String==L){
  gauche()
  avance()
} else if (litMessage():String==I){
  droite()
  droite()
  avance()
} else if (litMessage():String==A){
  avance()
} else if (litMessage():String==B){
  avance()
  avance()
} else if (litMessage():String==C){
  avance()
  avance()
  avance()
} else if (litMessage():String==Z){
  recule()
} else if (litMessage():String==Y){
  recule()
  recule()
} else if (litMessage():String==X){
  recule()
  recule()
  recule()
}
